Working implementation for React-Native.

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "gpg",
     "openpgp"
   ],
-  "main": "dist/openpgp.js",
+  "main": "src/openpgp.js",
   "directories": {
     "lib": "src"
   },
   "files": [
     "src/",
-    "dist/openpgp.js",
-    "dist/openpgp.worker.js",
-    "dist/openpgp.min.js",
-    "dist/openpgp.worker.min.js",
+    "src/openpgp.js",
+    "src/openpgp.worker.js",
+    "src/openpgp.min.js",
+    "src/openpgp.worker.min.js",
     "test/unittests.js",
     "test/general",
     "test/crypto"
@@ -60,6 +60,11 @@
     "zlibjs": "~0.2.0"
   },
   "dependencies": {
+    "react-native-randombytes": "file:///Users/orhan/react-native-randombytes",
+    "rusha": "^0.8.3",
+    "asmcrypto-lite": "^1.0.1",
+    "buffer": "^4.5.0",
+    "es6-promise": "^3.1.2",
     "node-fetch": "^1.3.3",
     "node-localstorage": "~1.1.2"
   },
