--- a/bower.json
+++ b/bower.json
@@ -8,10 +8,10 @@
   ],
   "description": "OpenPGP.js is a Javascript implementation of the OpenPGP protocol. This is defined in RFC 4880.",
   "main": [
-    "dist/openpgp.js",
-    "dist/openpgp.worker.js",
-    "dist/openpgp.min.js",
-    "dist/openpgp.worker.min.js"
+    "src/openpgp.js",
+    "src/openpgp.worker.js",
+    "src/openpgp.min.js",
+    "src/openpgp.worker.min.js"
   ],
   "moduleType": [
     "amd",
