Added Android and iOS Projects for RN compatibility

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "zlibjs": "~0.2.0"
   },
   "dependencies": {
-    "react-native-randombytes": "file:///Users/orhan/react-native-randombytes",
+    "react-native-randombytes": "github:orhan/react-native-randombytes",
     "rusha": "^0.8.3",
     "asmcrypto-lite": "^1.0.1",
     "buffer": "^4.5.0",
