--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "chai": "~3.4.1",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "^3.2.1",
     "grunt": "~0.4.5",
     "grunt-browserify": "~4.0.1",
     "grunt-contrib-clean": "~0.7.0",
@@ -55,13 +55,13 @@
     "zlibjs": "~0.2.0"
   },
   "dependencies": {
-    "react-native-randombytes": "github:orhan/react-native-randombytes",
-    "rusha": "^0.8.3",
     "asmcrypto-lite": "^1.0.1",
     "buffer": "^4.5.0",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "^3.2.1",
     "node-fetch": "^1.3.3",
-    "node-localstorage": "~1.1.2"
+    "node-localstorage": "~1.1.2",
+    "react-native-randombytes": "github:orhan/react-native-randombytes",
+    "rusha": "^0.8.3"
   },
   "repository": {
     "type": "git",
