--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "rusha": "^0.8.3",
     "asmcrypto-lite": "^1.0.1",
     "buffer": "^4.5.0",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "3.1.2",
     "node-fetch": "^1.3.3",
     "node-localstorage": "~1.1.2"
   },
