--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "chai": "~3.4.1",
-    "es6-promise": "^3.2.1",
+    "es6-promise": "3.1.2",
     "grunt": "~0.4.5",
     "grunt-browserify": "~4.0.1",
     "grunt-contrib-clean": "~0.7.0",
@@ -57,7 +57,7 @@
   "dependencies": {
     "asmcrypto-lite": "^1.0.1",
     "buffer": "^4.5.0",
-    "es6-promise": "^3.2.1",
+    "es6-promise": "3.1.2",
     "node-fetch": "^1.3.3",
     "node-localstorage": "~1.1.2",
     "react-native-randombytes": "github:orhan/react-native-randombytes",
