--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "es6-promise": "3.1.2",
     "node-fetch": "^1.3.3",
     "node-localstorage": "~1.1.2",
-    "react-native-randombytes": "github:orhan/react-native-randombytes",
+    "react-native-randombytes": "^2.1.0",
     "rusha": "^0.8.3"
   },
   "repository": {
