--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "react-native-openpgp",
   "description": "React-Native OpenPGP is an OpenPGP.js implementation made to work under React-Native.",
-  "version": "2.1.0",
-  "license": "LGPL-3.0+",
-  "homepage": "http://openpgpjs.org/",
+  "version": "1.0.0",
+  "license": "MIT",
   "engines": {
     "node": ">=0.8"
   },
@@ -23,44 +22,12 @@
   "directories": {
     "lib": "src"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "asmcrypto-lite": "^1.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "chai": "~3.4.1",
-    "es6-promise": "3.1.2",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "~4.0.1",
-    "grunt-contrib-clean": "~0.7.0",
-    "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-copy": "~0.8.0",
-    "grunt-contrib-jshint": "~0.12.0",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsbeautifier": "~0.2.10",
-    "grunt-jscs": "^2.7.0",
-    "grunt-jsdoc": "~1.1.0",
-    "grunt-mocha-istanbul": "^3.0.1",
-    "grunt-mocha-test": "~0.12.7",
-    "grunt-saucelabs": "8.6.2",
-    "grunt-text-replace": "~0.4.0",
-    "istanbul": "~0.4.1",
-    "mocha": "~2.3.4",
-    "rusha": "^0.8.3",
-    "sinon": "^1.17.3",
-    "whatwg-fetch": "~0.11.0",
-    "zlibjs": "~0.2.0"
-  },
   "dependencies": {
     "asmcrypto-lite": "^1.0.1",
     "buffer": "^4.5.0",
     "es6-promise": "3.1.2",
     "node-fetch": "^1.3.3",
     "node-localstorage": "~1.1.2",
-    "react-native-randombytes": "^2.1.0",
     "rusha": "^0.8.3"
   },
   "repository": {
